--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,14 @@
 <resources>
-    <string name="app_name">Pass Generator Superman</string>
+    <string name="app_name">Pass Generator Plants</string>
     <string name="loading">Loading...</string>
     <string name="here_will_be_your_pass">here will be your password...\n Just press GENERATE</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="generate">generate</string>
     <string name="settings_text">settings</string>
-    <string name="text_about">Create strong passwords with keywords from your favorite movie to protect your accounts.\n\nSuperman is a superhero who appears in American comic books published by DC Comics. The character was created by writer Jerry Siegel and artist Joe Shuster, and debuted in the comic book Action Comics #1</string>
+    <string name="text_about">Create strong passwords with keywords to protect your accounts.\n\n</string>
     <string name="music">music</string>
+    <string name="vibration">vibration</string>
 
     <string-array name="diff_levels">
         <item>SIMPLE</item>
